# perp-engine

./: Cargo.toml  README.md  test_engine.sh
engine/: engine.rs  mod.rs  position.rs
perp-engine/: .env  Cargo.toml  README.md  test_engine.sh
perp-engine/src/: main.rs
perp-engine/src/api/: auth.rs  mod.rs  position.rs
perp-engine/src/auth/: middleware.rs  mod.rs
perp-engine/src/engine/: engine.rs  event.rs  mod.rs  multi_user_engine.rs  position.rs  trade.rs
perp-engine/src/market/: ws.rs
perp-engine/tests/: edge_case_tests.rs  funding_rate_tests.rs  liquidation_tests.rs  mark_price_tests.rs  multi_user_isolation_tests.rs  pnl_tests.rs  position_opening_tests.rs
perp-frontend/: README.md  package-lock.json  package.json
perp-frontend/app/: page.tsx
perp-frontend/components/: Login.tsx  MarketInfo.tsx  OpenPositionForm.tsx  PositionsTable.tsx  TradeChart.tsx  TradeHistoryTable.tsx
perp-frontend/services/: api.ts
src/: main.rs
src/api/: position.rs
src/engine/: engine.rs  mod.rs
src/market/: ws.rs
