[package]
name = "perp_engine"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
tokio-tungstenite = { version = "0.23", features = ["native-tls"] }
futures-util = "0.3"
actix-cors = "0.7.1"
rust_decimal = { version = "1.34", features = ["serde-float"] }
rust_decimal_macros = "1.34"
tracing = "0.1"
tracing-subscriber = "0.3"
validator = { version = "0.16", features = ["derive"] }
chrono = { version = "0.4.44", features = ["serde"] }
